# treejar

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  RELEASE_NOTES.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  live_testing_findings.md  manifest  pyproject.toml  review_report_escalation.md  run_indexer.py  test_db.py
.claude/: settings.json
.codex/: handoff.md  orchestrator.toml  project-index.md  report-template.md  scope-criterion-snapshot-template.json  scope-preservation-ledger-template.json  stage-artifact-template.md  stage-manifest-template.json  subagent-spawn-template.md  subagent-task-contract.md
docs/: 01-tz-basic.md  02-tz-extended.md  03-ai-agent-requirements.md  04-sales-dialogue-guidelines.md  05-company-values.md  06-dialogue-evaluation-checklist.md  07-knowledge-base-spec.md  08-manager-evaluation-criteria.md  admin-guide.md  architecture.md  checklist-answers.md  client-action-items.md  contract.md  deep-research-prompt.md  deep-think-prompt.md  dev-guide.md  estimate.md  faq.md  infrastructure-notes.md  integration-tests-prompt.md  latency-evidence.md  manager-guide.md  metrics.md  next-phase-prompt.md  onboarding-checklist.md  operations-runbook.md  pdf-generation-research.md  progress-report-2026-02-25.md  questions-for-client.md  response-to-client-2026-02-17.md  roadmap.md  session-6-prompt.md  session-7-prompt.md  session-quality-evaluator-prompt.md  session-stage2-parallel-prompt.md  task-plan.md  testing-guide-stage1.md  tz.md  vps-ssh-access-request.md  Проект Виктор  - Лист1.csv
migrations/: env.py
nginx/: nginx.conf
scripts/: analyze_chat_latency.py  benchmark_chat_delivery_boundary.py  bot_test.py  bot_test.sh  bot_test_suite.py  docker-maintenance.sh  entrypoint.sh  escalation_guard.py  install-docker-maintenance-cron.sh  load_test_conversations.py  register_telegram_webhook.py  repl_simulation.py  run_integration_tests.py  send_test_pdf.py  setup-vps.sh  setup_bot.py  test_openrouter.py  test_wazzup_channels.py  treejar-dev.conf  treejar-prod-bootstrap.conf  treejar-prod.conf  verify_all.sh  verify_api.py  verify_crm.py  verify_db.py  verify_followups.py  verify_inventory.py  verify_llm.py  verify_pdf.py  verify_quality.py  verify_rag.py  verify_rag_pipeline.py  verify_telegram.py  verify_voice.py  verify_wazzup.py  verify_zoho.py  vps-deploy.sh
src/: main.py  worker.py
tests/: conftest.py  pytest_posix_temp.py  test_admin_audit.py  test_admin_bot_rules_api.py  test_admin_client_self_test.py  test_admin_crm_api.py  test_admin_dashboard_frontend.py  test_admin_knowledge_base_api.py  test_admin_views_localization.py  test_api_admin.py  test_api_admin_auth.py  test_api_conversations.py  test_api_crm.py  test_api_escalation.py  (+118 more)
(+603 files in other folders)
